added commit of jan 31

--- a/src/admin/scss/main.scss
+++ b/src/admin/scss/main.scss
@@ -15,6 +15,12 @@
     height: 94vh;
 }
 
+.ncpi-frontend {
+    .ncpi-h-screen {
+        height: 100vh;
+    }
+}
+
 #wpbody-content {
     padding-bottom: 0; 
 }
