--- a/assets/admin/css/main.css
+++ b/assets/admin/css/main.css
@@ -44,6 +44,11 @@
   padding-bottom: 0;
 }
 
+.ncpi-page-content {
+  max-height: 600px;
+  overflow: hidden;
+}
+
 .ce-block__content, .ce-toolbar__content {
   max-width: calc(100% - 80px) !important;
 }
