--- a/src/admin/scss/main.scss
+++ b/src/admin/scss/main.scss
@@ -28,4 +28,8 @@
 }
 
 //editor js
+.ncpi-page-content {
+    max-height: 600px; //TODO: add a4 size later
+    overflow: hidden;
+}
 .ce-block__content, .ce-toolbar__content { max-width:calc(100% - 80px) !important; } .cdx-block { max-width: 100% !important; }
