update invoice css

--- a/src/admin/js/react/components/invoice-test/LineItems.module.scss
+++ b/src/admin/js/react/components/invoice-test/LineItems.module.scss
@@ -1,20 +1,20 @@
-@import 'Invoice';
+// @import 'Invoice';
 
 .lineItems {
-  margin-bottom: $rhythm * 4;
+  margin-bottom: 20px * 4;
   .addItem {
-    padding-top: $rhythm;
+    padding-top: 20px;
     button {
-      @extend %flex-center;
+      // @extend %flex-center;
       background: none;
-      padding: $rhythm / 2;
-      border: 1px solid $addColor;
-      color: $addColor;
-      border-radius: $borderRadius;
+      padding: 10px;
+      border: 1px solid #999;
+      color: #999;
+      border-radius: 3px;
       float: right;
       .addIcon {
-        color: $addColor;
-        margin-right: $rhythm / 4;
+        color: #999;
+        margin-right: 5px;
       }
     }
   }
@@ -22,45 +22,45 @@
 
 .gridTable {
   margin: 0 auto;
-  border: 1px solid $tableBorderColor;
-  border-radius: $borderRadius;
+  border: 1px solid #dfdfdf;
+  border-radius: 3px;
   overflow: hidden;
   display: grid;
   & > .row {
     display: grid;
     grid-template-columns: 1fr repeat(2, 5fr) 2fr repeat(2, 3fr) 2fr; //repeat(7, 1fr);
-    border-bottom: 1px solid $tableBorderColor;
+    border-bottom: 1px solid #dfdfdf;
     &:last-of-type {
       border-bottom: none;
     }
     &.header > div {
       text-align: center;
       font-weight: bold;
-      background: $boxBgColor;
+      background: white;
     }
     &.editable > div {
-      padding: $rhythm / 2;
+      padding: 10px;
     }
     & > div {
-      @extend %flex-center;
-      padding: ($rhythm/2);
-      border-left: 1px solid $tableBorderColor;
+      // @extend %flex-center;
+      padding: 10px;
+      border-left: 1px solid #dfdfdf;
       width: 100%;
-      line-height: $rhythm;
-      min-width: $rhythm;
+      line-height: 20px;
+      min-width: 20px;
       &:first-of-type {
-        padding: ($rhythm/2) 0;
+        padding: 10px 0;
         border-left: none;
       }
       &:last-of-type {
-        padding: ($rhythm/2) 0;
+        padding: 10px 0;
       }
       &:first-of-type, &:nth-child(4), &:last-of-type {
         text-align: center;
       }
       & > .deleteItem {
-        @extend %flex-center;
-        color: $removeColor;
+        // @extend %flex-center;
+        color: red;
         background: none;
         border: 0;
         padding: 0;
@@ -69,7 +69,7 @@
     }
   }
   .currency > input[type=number] {
-    max-width: $rhythm * 4;
+    max-width: 20px * 4;
   }
 
 }
@@ -81,7 +81,5 @@
 
 .listItemDragging {
   background: #f9fff9;
-  border: 1px solid $tableBorderColor;
+  border: 1px solid #dfdfdf;
 }
-
-
