--- a/src/admin/js/react/components/invoice-test/Invoice.module.scss
+++ b/src/admin/js/react/components/invoice-test/Invoice.module.scss
@@ -103,9 +103,9 @@
 button.payNow {
   display: block;
   padding: (20px) (40px);
-  background: lightyellow;
+  background: #f7f7f7;
   border-radius: 4px;
-  border: 1px solid #444;
+  border: 1px solid #dfdfdf;
 }
 
 .footer {
