--- a/assets/admin/css/main.css
+++ b/assets/admin/css/main.css
@@ -1,3 +1,29 @@
+.ncpi-pagination {
+  display: inline-block;
+}
+
+.ncpi-pagination li {
+  display: inline;
+}
+
+.ncpi-pagination li a {
+  color: #2d3748;
+  background: #e2e8f0;
+  float: left;
+  padding: 5px 15px;
+  text-decoration: none;
+  border-right: 1px solid #c9c9c9;
+}
+
+.ncpi-pagination li.next a {
+  border-right: none;
+}
+
+.ncpi-pagination li.active a {
+  color: #fff;
+  background-color: #2d3748;
+}
+
 body {
   background-color: transparent;
 }
