single invoice note and group added

--- a/src/admin/scss/main.scss
+++ b/src/admin/scss/main.scss
@@ -5,7 +5,7 @@ body {
     background-color: transparent;
 }
 .upgrade-btn { background: #f7f7f7; }
-.active-nav-link { color: #1947ee; }
+.active-nav-link { color: #1947ee !important; }
  
 .ncpi-h-screen {
     height: 94vh;
