--- a/src/admin/scss/welcome.scss
+++ b/src/admin/scss/welcome.scss
@@ -499,6 +499,7 @@ body.toplevel_page_ncpi-welcome #wpcontent > #wpbody {
     padding: 14px;
     width: 91%;
     border: 1px solid #dddddda8;
+    line-height: 1;
     outline: none;
   }
   
